# GalPathModify

./: .gitignore  CMakeLists.txt  README.md  build.bat  mingw32.cmake
helper/: dump.txt  gen_proxy.py  winmm.def
src/: dllmain.cpp  exports.def  hook.cpp  hook.h  proxy.cpp  proxy.h
